--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -34,6 +34,16 @@
                         </p>
                     </a>
                 </li>
+
+                <li class="nav-item">
+                    <a th:href="@{/admin/upload}" th:class="${path}=='upload'?'nav-link active':'nav-link'">
+                        <i class="nav-icon fa fa-plus"></i>
+                        <p>
+                           文件上傳
+                        </p>
+                    </a>
+                </li>
+
                 <li class="nav-header">首页配置</li>
                 <li class="nav-item">
                     <a th:href="@{/admin/carousels}"
