--- a/src/main/resources/templates/mall/recommend.html
+++ b/src/main/resources/templates/mall/recommend.html
@@ -1,10 +1,39 @@
+<!-- Copyright (c) 2019-2020 十三 all rights reserved. -->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="mall/header::head-fragment('NewBee商城-搜索','search')">
 </head>
 <body>
+<header th:replace="mall/header::header-fragment"></header>
+<!-- nav -->
+<nav th:replace="mall/header::nav-fragment"></nav>
 
+<div class="classify">
+    <div class="findword">"
+        <th:block th:text="每日好物">每日好物</th:block>
+    </div>
+</div>
+
+
+
+<div class="section">
+    <div class="list">
+       <ul>
+       </ul>
+    </div>
+</div>
+
+<div class="goods_item center">
+    <div class="main">
+        <ul>
+        </ul>
+    </div>
+</div>
+
+<div th:replace="mall/footer::footer-fragment"></div>
+<!-- jQuery -->
+<script th:src="@{/admin/plugins/jquery/jquery.min.js}"></script>
+<script th:src="@{/mall/js/search.js}" type="text/javascript"></script>
+<script th:src="@{/mall/js/recommend.js}" type="text/javascript"></script>
 </body>
 </html>
