--- a/src/main/resources/templates/mall/recommend.html
+++ b/src/main/resources/templates/mall/recommend.html
@@ -5,43 +5,65 @@
 </head>
 <body>
 <header th:replace="mall/header::header-fragment"></header>
-<!-- nav -->
-<nav th:replace="mall/header::nav-fragment"></nav>
-
-<div class="classify">
-    <div class="findword">"
+<!--&lt;!&ndash; nav &ndash;&gt;-->
+<!--<nav th:replace="mall/header::nav-fragment"></nav>-->
+<header id="goodsStore">
+<div class="findword">"
+    <style type="text/css">
+        h1 {
+            color:yellow;
+            text-shadow: 5px 5px 5px #ff0095;
+            font-size: 50px;
+        }
+    </style>
+    <h1>
         <th:block th:text="每日好物">每日好物</th:block>
-    </div>
+    </h1>
 </div>
-
+</header>
 
 
 <div class="section">
-    <div class="list">
+    <div class="list" >
         <th:block th:each="item : ${goodsCategoryList}">
-                <em>
-                    <a href=" " th:href="@{'/recommend?categoryId='+${item.categoryId}}">
-                    <th:block th:text="${item.categoryName}"></th:block>
-                    </a>
-                </em>
+            <em>
+                <a href=" " th:href="@{'/recommend?categoryId='+${item.categoryId}}">
+                        <th:block th:text="${item.categoryName}"
+                        </th:block>
+                </a>
+            </em>
         </th:block>
     </div>
 </div>
 
 <div class="goods_item center">
     <div class="main">
-        <th:block th:each="item : ${goodsStore}">
-            <th:block th:each="img : ${item.img}">
-                <img th:src="@{${imgList.goodsCoverImg}}" style="width:10%">
-            </th:block>
-        </th:block>
+        <ul>
+            <li th:each="item : ${goodsImg}">
+                <th:block th:each="img : ${item.img}">
+                    <img width="90" height="90" th:src="@{${img}}">
+                </th:block>
+            </li>
+        </ul>
     </div>
 </div>
 
-<div th:replace="mall/footer::footer-fragment"></div>
+<style type="text/css">
+    .list {
+        font-size: 20px;
+        font-weight: bolder;
+        background: yellow;
+    }
+
+    li {
+        display:inline
+    }
+</style>
+
+<!--<div th:replace="mall/footer::footer-fragment"></div>-->
 <!-- jQuery -->
 <script th:src="@{/admin/plugins/jquery/jquery.min.js}"></script>
 <script th:src="@{/mall/js/search.js}" type="text/javascript"></script>
-<script th:src="@{/mall/js/recommend.js}" type="text/javascript"></script>
+<!--<script th:src="@{/mall/js/recommend.js}" type="text/javascript"></script>-->
 </body>
 </html>
