--- a/src/main/resources/templates/mall/recommend.html
+++ b/src/main/resources/templates/mall/recommend.html
@@ -8,35 +8,41 @@
 <!--&lt;!&ndash; nav &ndash;&gt;-->
 <!--<nav th:replace="mall/header::nav-fragment"></nav>-->
 <header id="goodsStore">
-<div class="findword">"
-    <style type="text/css">
-        h1 {
-            color:yellow;
-            text-shadow: 5px 5px 5px #ff0095;
-            font-size: 50px;
-        }
-    </style>
-    <h1>
-        <th:block th:text="每日好物">每日好物</th:block>
-    </h1>
-</div>
+    <div class="findword">"
+        <style type="text/css">
+            h1 {
+                color: yellow;
+                text-shadow: 5px 5px 5px #ff0095;
+                font-size: 50px;
+            }
+        </style>
+        <h1>
+            <th:block th:text="每日好物">每日好物</th:block>
+        </h1>
+    </div>
 </header>
 
 
-<div class="section">
+<div class="section" style="width: 100%">
     <div class="list" >
         <th:block th:each="item : ${goodsCategoryList}">
-            <em>
-                <a href=" " th:href="@{'/recommend?categoryId='+${item.categoryId}}">
-                        <th:block th:text="${item.categoryName}"
-                        </th:block>
-                </a>
-            </em>
+            <div class="title" style="float: left;">
+                <div th:class="${ categoryId == null ||categoryId == item.categoryId ?'active':''}">
+                    <dt>
+                        <em>
+                            <a href=" " th:href="@{'/recommend?categoryId='+${item.categoryId}}" style="font-style:normal;">
+                                <th:block th:text="${item.categoryName}">
+                                </th:block>
+                            </a>
+                        </em>
+                    </dt>
+                </div>
+            </div>
         </th:block>
     </div>
 </div>
 
-<div class="goods_item center">
+<div class="goods_item center" style="width:100%;">
     <div class="main">
         <ul>
             <li th:each="item : ${goodsImg}">
@@ -48,22 +54,42 @@
     </div>
 </div>
 
+<div class="scrollDown">
+    <p id="scroll-to"></p>
+</div>
+
+
 <style type="text/css">
+
+    .active {
+        background-color: #ffc600;
+    }
+
     .list {
         font-size: 20px;
         font-weight: bolder;
         background: yellow;
+        height: 30px;
+        width: 100%;
+    }
+
+    .main {
+        width: 300px;
+        height: 600px;
     }
 
     li {
-        display:inline
+        display: block;
+        float: left;
     }
+
+
 </style>
 
-<!--<div th:replace="mall/footer::footer-fragment"></div>-->
-<!-- jQuery -->
+<div th:replace="mall/footer::footer-fragment"></div>
+jQuery
 <script th:src="@{/admin/plugins/jquery/jquery.min.js}"></script>
 <script th:src="@{/mall/js/search.js}" type="text/javascript"></script>
-<!--<script th:src="@{/mall/js/recommend.js}" type="text/javascript"></script>-->
+<script th:src="@{/mall/js/recommend.js}" type="text/javascript"></script>
 </body>
 </html>
